--- a/css/reset.css
+++ b/css/reset.css
@@ -53,13 +53,20 @@ a {
     color: inherit;
 }
 
-.txt-hide {
+.tag-hide {
     position: absolute;
     clip: rect(0 0 0 0);
     width: 1px;
     height: 1px;
     /* margin: -1px; */
     overflow: hidden;
+}
+
+.txt-hide{
+    display:block;
+    overflow:hidden;
+    Font-size:1px;
+    text-indent:-9999px;
 }
 
 img {
@@ -74,3 +81,4 @@ input{
 	color: inherit;
 	font-family: inherit;
 }
+
