--- a/css/10000hours.css
+++ b/css/10000hours.css
@@ -1,12 +1,12 @@
 @charset "utf-8";
 
 /* font */
-/* @font-face {
+@font-face {
     font-family: 'OTEnjoystoriesBA';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-} */
+}
 
 @font-face {
     font-family: 'GmarketSansBold';
@@ -45,6 +45,10 @@ body{
     word-break: keep-all;
 }
 
+body.stop{
+    overflow: hidden;
+}
+
 .wrapping{
     width: 75rem;
     max-width: calc(100% - 3rem);
@@ -63,6 +67,21 @@ input[type=number] {
     -moz-appearance: textfield;
 }
 
+.close{
+    display: none;
+}
+
+.btn{
+    padding: 1.3125rem 3.0625rem;
+    border-radius: 100vw;
+    border: none;
+    font-family: 'GmarketSansBold';
+    font-size: inherit;
+    color: var(--main);
+    cursor: pointer;
+}
+
+
 /* design */
 .header{
     padding: 3.375rem 0 3.688rem;
@@ -78,7 +97,6 @@ input[type=number] {
 
 .header .logo a{
     display: inline-block;
-    height: 100%;
 }
 
 /* header end */
@@ -86,6 +104,7 @@ input[type=number] {
 .main{
     margin: 4.125rem 0 8.125rem;
     text-align: center;
+    overflow: hidden;
 }
 
 .main .tit-main{
@@ -105,16 +124,6 @@ input[type=number] {
 .main .txt-explan strong{
     font-family: 'GmarketSansBold';
     font-size: 1.5rem;
-}
-
-.main .btn{
-    padding: 1.3125rem 3.0625rem;
-    border-radius: 100vw;
-    border: none;
-    font-family: 'GmarketSansBold';
-    font-size: inherit;
-    color: var(--main);
-    cursor: pointer;
 }
 
 .form-plan .txt-plan{
@@ -145,6 +154,21 @@ input[type=number] {
     background-color: var(--sub);
     margin-top: 7.1875rem;
 }
+.result-loading{
+    margin-top: 9.1875rem;
+    padding-top: 14.063rem;
+    background: url(../img/loading.png) no-repeat center;
+}
+
+.result-loading.active{
+    animation: loading infinite 1.5s ease-in-out;
+}
+
+
+@keyframes loading {
+    0%{transform: rotate(0deg);}
+    100%{transform: rotate(360deg);}
+}
 
 .rule_result{
     margin-top: 9.1875rem;
@@ -174,6 +198,10 @@ input[type=number] {
     background-color: var(--sub);
     margin-right: 1.125rem;
 }
+.btn-share{
+    background-color: #fff;
+}
+
 /* .main end */
 
 .footer{
@@ -186,9 +214,62 @@ input[type=number] {
     max-width:7.8125rem;
     margin: 0 auto 1.25rem;
 }
+
+.footer-logo a{
+    display: inline-block;
+}
+
 .txt-footer{
     line-height: 1.25;    
 }
+
+.modal-fighting{
+    width: 100vw;
+    height: 100vh;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    left: 0;top: 0;
+    color: var(--main);
+}
+
+.modal-fighting .modal-box{
+    width: 50rem;
+    height: 50rem;
+    background-color: #fff;
+    position: absolute;
+    left: 0; top: 0; bottom: 0; right: 0;
+    margin: auto;
+    border-radius: 1.875rem;
+    font-family: 'OTEnjoystoriesBA';
+    padding: 4.75rem 0 4.25rem;
+    box-sizing: border-box;
+}
+
+.modal-box h2{
+    font-size: 6rem;
+    line-height: 1.1;
+}
+
+.modal-box p{
+    font-size: 2.25rem;
+    margin-bottom: 1.875rem;
+}
+
+
+.modal-box img{
+    display: block;
+    width: 54.125%;
+    margin: 0 auto;
+}
+
+.modal-box .btn-go{
+    display: inline-block;
+    margin-top: 4.625rem;
+    background-color: var(--sub);
+}
+
+
 
 /* media */
 
@@ -243,6 +324,9 @@ input[type=number] {
     .form-plan .btn-result span{
         display: block;
     }
+    .result-loading{
+        margin-top: 4rem;
+    }
 
     .rule_result{
         margin-top: 4rem;
@@ -276,6 +360,23 @@ input[type=number] {
     }
     .txt-footer{
         line-height: 1.4;    
+    }
+
+    .modal-fighting .modal-box{
+        width: 20.625rem;
+        height: 31.25rem;
+        padding: 2.5rem 0;
+    }
+
+    .modal-box h2{
+        font-size: 4rem;
+    }
+    .modal-box .btn-go{
+        border-radius: 0.813rem;
+        line-height: 1.2;
+    }
+    .modal-box .btn-go span{
+        display: block;
     }
 
 }
